Issue #15291: Fix a memory leak where AST nodes where not properly deallocated.